# ECALe-lcio

./: .gitignore  README.md  init_key4hep.sh
ExampleProcessor/: CMakeLists.txt  README.md
ExampleProcessor/include/: ExampleProcessor.hh
ExampleProcessor/scripts/: test.xml
ExampleProcessor/src/: ExampleProcessor.cc
MIPCalibration/: README.md
MergeEvents/: CMakeLists.txt  README.md
MergeEvents/include/: MergeEvents.h  Merger.h
MergeEvents/src/: MergeEvents.cc  Merger.cc
NNClusteringProcessor/: CMakeLists.txt  README.md
NNClusteringProcessor/include/: NNClusteringProcessor.hh  NNClustersAIQ.h
NNClusteringProcessor/src/: NNClusteringProcessor.cc
PhotonClusteringProcessor/: CMakeLists.txt  README.md
PhotonClusteringProcessor/include/: TwoPhotonClustering.hh
PhotonClusteringProcessor/scripts/: merge-digitisation-nnc.xml
PhotonClusteringProcessor/src/: TwoPhotonClustering.cc
PixelizationProcessor/: CMakeLists.txt  README.md
PixelizationProcessor/include/: PixelizationProcessor.hh
PixelizationProcessor/scripts/: test.sh  test.xml
PixelizationProcessor/src/: PixelizationProcessor.cc
SimCalo2CaloHit/: CMakeLists.txt  README.md
SimCalo2CaloHit/include/: SimCalo2CaloHit.hh
SimCalo2CaloHit/src/: SimCalo2CaloHit.cc
examples/Arbor/: README.md  test.sh  test.xml
examples/CED_display/: README.md  display.xml
examples/CaloHit/: test.sh  test.xml
examples/Clustering/: README.md  test.sh  test.xml
examples/MergeEvents/: README.md  test.sh  test.xml
generation/: README.md  README_ECAL.md
generation/geometry/: ECAL_commondefs.xml
generation/geometry/ECALe_luxe/: ECALe_luxe_v1.xml
generation/run_scripts/: generic_condor.sh  generic_condor_old.sh  generic_condor_single.sh  restart_everything.sh  send_PID.sh  send_grid.sh  send_uniform.sh  uniform_condor.sh
